Fixed font bug on mobile devices

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -135,6 +135,11 @@ footer {
     user-select: none;
 }
 
+#menu li {
+    margin-bottom: 1em;
+    text-transform: uppercase;
+}
+
 #menuToggle a {
     text-decoration: none;
     color: #232323;
